# ai_agent_example

./: README.md  agent.py  crew.py  main.py  tools.py
sample_ai_agent/: README.md  analysis.md  pyproject.toml  report.md
sample_ai_agent/src/sample_ai_agent/: crew.py  main.py
sample_ai_agent/src/sample_ai_agent/config/: agents.yaml  tasks.yaml
