[project]
name = "sample_ai_agent"
version = "0.1.0"
description = "sample_ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
sample_ai_agent = "sample_ai_agent.main:run"
run_crew = "sample_ai_agent.main:run"
train = "sample_ai_agent.main:train"
replay = "sample_ai_agent.main:replay"
test = "sample_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
